--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     background-color: #8495a5;
     font-family: Arial, sans-serif;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
